syntax = "proto3";
package scalar.protocol.exported.v1beta1;

option go_package = "github.com/scalarorg/scalar-core/x/protocol/exported";

import "gogoproto/gogo.proto";

option (gogoproto.goproto_getters_all) = false;

enum LiquidityModel {
  option (gogoproto.goproto_enum_prefix) = false;
  LIQUIDITY_MODEL_UNSPECIFIED = 0;
  LIQUIDITY_MODEL_POOL = 1;
  LIQUIDITY_MODEL_UPC = 2;
}

message MinorAddress {
  string chain_name = 1 [
    (gogoproto.customname) = "ChainName",
    (gogoproto.casttype) =
        "github.com/scalarorg/scalar-core/x/nexus/exported.ChainName"
  ];
  string address = 2;
}
message ProtocolInfo {
  // string key_id = 1 [
  //   (gogoproto.customname) = "KeyID",
  //   (gogoproto.casttype) =
  //       "github.com/scalarorg/scalar-core/x/multisig/exported.KeyID"
  // ];
  // bytes custodians_pubkey = 2 [ (gogoproto.customname) = "CustodiansPubkey"
  // ];
  string custodians_group_uid = 1
      [ (gogoproto.customname) = "CustodiansGroupUID" ];
  LiquidityModel liquidity_model = 2
      [ (gogoproto.customname) = "LiquidityModel" ];
  string symbol = 3;
  string origin_chain = 4 [
    (gogoproto.customname) = "OriginChain",
    (gogoproto.casttype) =
        "github.com/scalarorg/scalar-core/x/nexus/exported.ChainName"
  ];
  repeated MinorAddress minor_addresses = 5
      [ (gogoproto.customname) = "MinorAddresses" ];
}
