syntax = "proto3";
package scalar.protocol.v1beta1;

import "scalar/protocol/v1beta1/types.proto";
import "scalar/protocol/exported/v1beta1/types.proto";


import "gogoproto/gogo.proto";

option go_package = "github.com/scalarorg/scalar-core/x/protocol/types";

message ProtocolsRequest {
  string pubkey = 1;
  string address = 2;
  string name = 3;
  scalar.protocol.exported.v1beta1.Status status = 4;
}

message ProtocolsResponse {
  repeated scalar.protocol.v1beta1.ProtocolDetails protocols = 1;
  uint64 total = 2;
}

message ProtocolRequest {
  string origin_chain = 1
      [ (gogoproto.casttype) =
            "github.com/scalarorg/scalar-core/x/nexus/exported.ChainName" ];
  string minor_chain = 2
      [ (gogoproto.casttype) =
            "github.com/scalarorg/scalar-core/x/nexus/exported.ChainName" ];
  string symbol = 3;
  string address = 4;
}

message ProtocolResponse { scalar.protocol.v1beta1.ProtocolDetails protocol = 1; }
