syntax = "proto3";
package scalar.protocol.v1beta1;

import "gogoproto/gogo.proto";
import "scalar/protocol/exported/v1beta1/types.proto";
import "scalar/chains/v1beta1/types.proto";
import "scalar/covenant/v1beta1/types.proto";

option go_package = "github.com/scalarorg/scalar-core/x/protocol/types";

// DestinationChain represents a blockchain where tokens can be sent

message Protocol {
  bytes bitcoin_pubkey = 1; // BTC's pubkey
  bytes scalar_pubkey = 2;  // Scalar's pubkey
  bytes scalar_address = 3; // Scalar's address
  string name = 4;
  bytes tag = 5;
  scalar.protocol.exported.v1beta1.ProtocolAttributes attributes = 6;
  scalar.protocol.exported.v1beta1.Status status = 7;
  // scalar.covenant.v1beta1.CustodianGroup custodian_group = 8;
  string custodian_group_uid = 8
      [ (gogoproto.customname) = "CustodianGroupUID" ];
  scalar.chains.v1beta1.Asset asset = 9; // External asset
  repeated scalar.protocol.exported.v1beta1.SupportedChain chains =
      10;            // Other chains with internal asset
  bytes avatar = 11; // Avatar of the protocol, base64 encoded
}

message ProtocolDetails {
  bytes bitcoin_pubkey = 1; // BTC's pubkey
  bytes scalar_pubkey = 2;  // Scalar's pubkey
  bytes scalar_address = 3; // Scalar's address
  string name = 4;
  bytes tag = 5;
  scalar.protocol.exported.v1beta1.ProtocolAttributes attributes = 6;
  scalar.protocol.exported.v1beta1.Status status = 7;
  string custodian_group_uid = 8
      [ (gogoproto.customname) = "CustodianGroupUID" ];
  scalar.chains.v1beta1.Asset asset = 9; // External asset
  repeated scalar.protocol.exported.v1beta1.SupportedChain chains = 10;   // Other chains with internal asset
  bytes avatar = 11; // Avatar of the protocol, base64 encoded
  scalar.covenant.v1beta1.CustodianGroup custodian_group = 12;
}